--- a/configure.ac
+++ b/configure.ac
@@ -594,12 +594,19 @@ else
     SWIG_VERSION=`$SWIG -version 2>&1 | $EGREP Version | cut -d ' ' -f 3`
     SWIG_VERSION_MAJOR=`echo $SWIG_VERSION | cut -d '.' -f 1`
     SWIG_VERSION_MINOR=`echo $SWIG_VERSION | cut -d '.' -f 2`
+    SWIG_VERSION_MICRO=`echo $SWIG_VERSION | cut -d '.' -f 3`
     if test $SWIG_VERSION_MAJOR -lt 2; then
       if test $SWIG_VERSION_MAJOR -lt 1; then
 	SWIG=
       else
         if test $SWIG_VERSION_MINOR -lt 3; then
 	  SWIG=
+	else
+          # EL5 has swig-1.3.29 which does not define SWIGJAVA
+	  if test $SWIG_VERSION_MICRO -lt 40; then
+            SWIG_CPPFLAGS=-DSWIGJAVA
+            AC_SUBST([SWIG_CPPFLAGS])
+	  fi
         fi
       fi
     fi
