fix redefintion of qsort_cmpf on RHEL5

--- a/lib/common/types.h.in
+++ b/lib/common/types.h.in
@@ -42,6 +42,7 @@ typedef unsigned char boolean;
 extern "C" {
 #endif
 
+    typedef int (*qsort_cmpf) (const void *, const void *);
     typedef int (*bsearch_cmpf) (const void *, const void *);
     typedef struct Agraph_s graph_t;
     typedef struct Agnode_s node_t;
