--- a/plugin/core/Makefile.am
+++ b/plugin/core/Makefile.am
@@ -12,6 +12,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/expr \
 	-I$(top_srcdir)/lib/ast \
 	-I$(top_srcdir)/lib/sfio \
+	-I$(top_srcdir)/lib/xdot \
 	-I$(top_srcdir)/lib/vmalloc \
 	$(LIBGVC_CFLAGS)
 
