--- a/doc/infosrc/Makefile.old
+++ b/doc/infosrc/Makefile.old
@@ -50,11 +50,11 @@ SGIF = Mcircle.gif Mdiamond.gif Msquare.gif box.gif \
       circle.gif diamond.gif doublecircle.gif \
       doubleoctagon.gif egg.gif ellipse.gif hexagon.gif house.gif \
       invhouse.gif invtrapezium.gif invtriangle.gif none.gif underline.gif \
-      octagon.gif oval.gif parallelogram.gif plaintext.gif \
-      point.gif polygon.gif trapezium.gif triangle.gif \
-      tripleoctagon.gif pentagon.gif septagon.gif rect.gif \
-      rectangle.gif square.gif star.gif tab.gif folder.gif box3d.gif component.gif \
-      promoter.gif cds.gif terminator.gif utr.gif \
+      octagon.gif oval.gif parallelogram.gif plaintext.gif note.gif \
+      point.gif polygon.gif trapezium.gif triangle.gif cylinder.gif \
+      tripleoctagon.gif pentagon.gif septagon.gif rect.gif plain.gif \
+      rectangle.gif square.gif star.gif tab.gif folder.gif box3d.gif \
+      component.gif promoter.gif cds.gif terminator.gif utr.gif \
       primersite.gif restrictionsite.gif fivepoverhang.gif \
       threepoverhang.gif noverhang.gif assembly.gif signature.gif \
       insulator.gif ribosite.gif rnastab.gif proteasesite.gif \
