Add test for a static build using dot plugin
Make sure we don't end up with unresolved symbols when linking all the
static libs into a final executable

--- a/lib/common/CMakeLists.txt
+++ b/lib/common/CMakeLists.txt
@@ -74,6 +74,7 @@ target_include_directories(graphviz_lib_common
 )
 target_link_libraries(graphviz_lib_common
     PRIVATE
+    graphviz_lib_gvc # FIXME: Circular dep
     graphviz_lib_label
     graphviz_lib_fdpgen
     graphviz_lib_cgraph
