adding lib/rxspencer - unmodified source copy

--- a/configure.ac
+++ b/configure.ac
@@ -3151,6 +3151,7 @@ AC_CONFIG_FILES(Makefile
 	lib/twopigen/Makefile
 	lib/patchwork/Makefile
 	lib/pack/Makefile
+	lib/rxspencer/Makefile
 	lib/ortho/Makefile
 	lib/expr/Makefile
 	lib/expr/libexpr.pc
