Use visual studio build.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,7 @@
-# do a shallow clone so the initial download doesn't take as long
-clone_depth: 50
+version: 2.39.{build}
 
-clone_folder: c:\graphviz-ms
+image: Visual Studio 2015
 
-build_script:
-  - '"%VS90COMNTOOLS%\..\..\VC\vcvarsall.bat" x86'
-  - devenv /setup
-# download busybox-w32 and save it as wget.exe
-  - ps: (new-object net.webclient).DownloadFile("ftp://ftp.tigress.co.uk/pub/gpl/6.0.0/busybox/busybox.exe", "C:\graphviz-ms\wget.exe")
-  - c:\graphviz-ms\windows\build.bat
+build:
+  project: graphviz.sln
+  verbosity: detailed
