Appveyor: set up Flex and Bison
Flex and Bison are needed to generate some code files.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,12 +7,15 @@ environment:
   CHERE_INVOKING: 1
   matrix:
     - compiler: msbuild
+      BISON: C:\ProgramData\chocolatey\lib\winflexbison\tools\win_bison.exe
+      FLEX: C:\ProgramData\chocolatey\lib\winflexbison\tools\win_flex.exe
     #- compiler: msys2
     #- compiler: cygwin
 
 install:
   # Only has to be installed when MSYS2 or Cygwin are enabled.
   #- cinst ghostscript
+  - cinst winflexbison
 
 build_script:
   # Ghostscript only has to be configured when MSYS2 or Cygwin are enabled.
