--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ environment:
     #- compiler: cygwin
 
 install:
+  # Retrieve submodules, dependencies are stored there.
+  - git submodule update --init
   # Only has to be installed when MSYS2 or Cygwin are enabled.
   #- cinst ghostscript
   - cinst winflexbison
